# primer-desktop

./: .gitignore  MVP.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  primer.sqlite
docs/: APPLICATION_FLOW.md  (+22 more)
src-tauri/: .env.example  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/postgres/: 20241203000000_initial_schema.sql  20241209000000_add_shortcuts_table.sql  20241209000001_add_selected_model_to_api_keys.sql  20251214000000_create_prompt_presets.sql  20251215000000_add_model_and_prompt_preset.sql  20251221000001_drop_shortcuts_table.sql  20251223000000_add_google_fields.sql  20251226000000_create_changelog_table.sql  20251226000001_refactor_changelog_schema.sql  20251229000000_add_summary_presets.sql  20251230000000_rag_foundation.sql  20251230000001_add_smart_rag_config.sql  20251230153000_create_google_calendar_tables.sql  20251231000000_create_notion_tables.sql  20260102000000_add_subscriptions.sql  202601030000001_stripe_customer_id.sql  20260103000000_unique_active_subscription_per_user.sql  20260104000000_oauth_sessions.sql  20260104140000_add_google_calendar_tokens.sql
src-tauri/migrations/sqlite/: 20241203000000_initial_schema.sql  20241209000000_add_shortcuts_table.sql  20241209000001_add_selected_model_to_api_keys.sql  20251211000000_add_app_config.sql  20251214000000_add_prompt_presets.sql  20251215000000_add_model_to_chats.sql  20251221000000_remove_shortcuts_fk.sql  20251223000000_add_google_fields.sql  20251229000000_add_summary_presets.sql  20251230000000_rag_foundation.sql  20251230000001_add_smart_rag_config.sql  20251230153000_add_google_token_to_sessions.sql  20251231_add_google_refresh_token.sql  20260102000000_add_subscriptions.sql  202601030000001_stripe_customer_id.sql  20260103000000_unique_active_subscription_per_user.sql  20260104000000_oauth_sessions.sql  20260105000000_remove_user_fk_from_api_keys.sql  20260112000000_add_follow_ups_to_messages.sql
src-tauri/resources/whisper.cpp/: whisper
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/clickthrough/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/commands/: audio_commands.rs  calendar_commands.rs  changelog_commands.rs  chat_commands.rs  config_commands.rs  email_commands.rs  log_commands.rs  mod.rs  notion_commands.rs  ollama_commands.rs  prompt_preset_commands.rs  screen_commands.rs  user_commands.rs  whisper_commands.rs  window_commands.rs
src-tauri/src/config/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/ai/: mod.rs
src-tauri/src/domain/calendar/: entity.rs  mod.rs  repository.rs  service.rs
src-tauri/src/domain/changelog/: entity.rs  repository.rs
src-tauri/src/domain/config/: entity.rs  repository.rs
src-tauri/src/domain/maintenance/: entity.rs  repository.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/mirror/: capture.rs  filter.rs  linux.rs  mod.rs  renderer.rs  windows.rs
src-tauri/src/shared/: mod.rs
src-tauri/src/stealth/: error.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/visibility/: linux.rs  macos.rs  mod.rs  windows.rs
(+296 files in other folders)
