[package]
name = "primer"
version = "0.1.0"
description = "A ai app"
authors = ["primer"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "chrono", "uuid", "sqlite", "postgres", "migrate"] }
argon2 = "0.5"
jsonwebtoken = "9"
lettre = "0.11"

