[package]
name = "primer"
version = "0.1.0"
description = "A ai app"
authors = ["primer"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "chrono", "uuid", "sqlite", "postgres", "migrate"] }
argon2 = "0.5"
jsonwebtoken = "9"
lettre = "0.11"
lazy_static = "1.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"
core-graphics = "0.23"
core-foundation = "0.9"

# Windows específico
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Devices_Display",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
] }
parking_lot = "0.12"
thiserror = "1.0"

# Linux específico
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xrandr", "xrecord", "xfixes", "xrender"] }
xcb = "1.2"
image = "0.24"
raw-window-handle = "0.6"
xcap = "0.7.1"
